完善运行时数据区